Re-organizing the folder structurer and complete manufacturer tab functionalities

--- a/HW4/HW4/HW4.csproj
+++ b/HW4/HW4/HW4.csproj
@@ -95,4 +95,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UI\Dashboard\" />
+    <Folder Include="UI\Customers\" />
+  </ItemGroup>
+
 </Project>
