Generate mock for table CUSTOMER

--- a/HW4/HW4/HW4.csproj
+++ b/HW4/HW4/HW4.csproj
@@ -58,6 +58,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Images\CUSTOMER_PIC\blank-pfp.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Images\Phone00.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
