Complete Customer tab CRUD functionalities

--- a/HW4/HW4/HW4.csproj
+++ b/HW4/HW4/HW4.csproj
@@ -59,7 +59,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Images\CUSTOMER_PIC\blank-pfp.png">
+    <None Update="Images\blank-pfp.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Images\Phone00.jpg">
@@ -101,8 +101,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Images\CUSTOMER_PIC\" />
     <Folder Include="UI\Dashboard\" />
-    <Folder Include="UI\Customers\" />
   </ItemGroup>
 
 </Project>
