Last Access Tab and Full Text Index

--- a/HW4/HW4/App.config
+++ b/HW4/HW4/App.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="Server" value="."/>
+		<add key="Server" value="DESKTOP-CDH2DEU\SQLSERVER"/>
 		<add key="Database" value="QLDTHOAI"/>
 		<add key="Username" value=""/>
 		<add key="Password" value=""/>
 		<add key="Entropy" value=""/>
 		<add key="isPasswordRemmembered" value="0"/>
+		<add key="LastAccessedTabIndex" value="0"/>
 	</appSettings>
 </configuration>
