--- a/HW4/IGui_QuantitySoldChart/IGui_QuantitySoldChart.csproj
+++ b/HW4/IGui_QuantitySoldChart/IGui_QuantitySoldChart.csproj
@@ -7,4 +7,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IGuiChart\IGuiChart.csproj" />
+  </ItemGroup>
+
 </Project>
