Reapply "Merge branch 'main' of https://github.com/sinful-johnny/WFP_AppBanDienThoai"
This reverts commit b2f372eac6198ca31ee898069aa244522b870fb0.

--- a/HW4/HW4/App.config
+++ b/HW4/HW4/App.config
@@ -7,5 +7,6 @@
 		<add key="Password" value=""/>
 		<add key="Entropy" value=""/>
 		<add key="isPasswordRemmembered" value="0"/>
+		<add key="LastAccessedTabIndex" value="0"/>
 	</appSettings>
 </configuration>
